2003-10-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command-history.c, cong-document.c

	Reduced the amount of debug spew

	* cong-command-history.c, cong-command.c, cong-command.h, cong-document.c

	Implemented command merging

2003-10-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-wrapper.c, cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, cong-editor-widget3.c, cong-location.c, cong-menus.c, cong-node-properties-dialog.c, cursor.c, plugin-cleanup-source.c, popup.c, tree.c, xmledit.c

	Moved everything over to new begin_command/end_command API with hook to consolidate multiple small commands into one entry in undo/redo history (not yet implemented)
	
2003-10-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-command.h, cong-document.c, cong-document.h, cong-editor-node-text.c, tree.c

	New API for making document modifications

	* cong-node-modification-add-after.c, cong-node-modification-add-before.c, cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c

	Various fixes in tree modification: fixed a typo in AddBefore, and fixed history of MakeOrphan
	
	* cong-command.c

	Added debug code; removed clipboard handling from undo/redo
	
	* cong-editor-widget3.c

	Disabled overzealous assertion

	* xmledit.c

	Removed clipboard state from the undo/redo history

2003-10-02  Robert Varga

	* cong-dispspec-registry.c, cong-document.h, cong-dtd.h,
	cong-editor-node.h, cong-eel.c, cong-error-dialog.h, cong-location.h,
	cong-plugin.h, cong-text-cache.h, global.h, popup.c, xmldata.c

	Added gtk-doc information.

2003-10-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cursor.c

	Fixed para splitting; now works, and works with undo/redo
