@@ -21,124 +21,6 @@
 #define AUTOGENERATE_DS
 */
 
-/*
-  A routine that tries to load all the bytes requested from the handle into the buffer and bails out on any failure
- */
-GnomeVFSResult
-cong_vfs_read_bytes(GnomeVFSHandle* vfs_handle, char* buffer, GnomeVFSFileSize bytes)
-{
-	GnomeVFSFileSize bytes_read;
-	GnomeVFSResult vfs_result = gnome_vfs_read(vfs_handle,buffer,bytes,&bytes_read);
-
-	g_assert(bytes==bytes_read); /* for now */
-
-	return vfs_result;
-}
-
-/* 
-   A routine that tries to syncronously load a file into a buffer in memory (surely this exists already somewhere?)
-*/
-GnomeVFSResult
-cong_vfs_new_buffer_from_file(const char* filename, char** buffer, GnomeVFSFileSize* size)
-{
-	GnomeVFSResult vfs_result;
-	GnomeVFSURI* uri;
-
-	g_return_val_if_fail(filename,GNOME_VFS_ERROR_BAD_PARAMETERS);
-	g_return_val_if_fail(buffer,GNOME_VFS_ERROR_BAD_PARAMETERS);
-	g_return_val_if_fail(size,GNOME_VFS_ERROR_BAD_PARAMETERS);
-
-	/* it seems that GnomeVFS works with absolute paths, so
-	   if the filename is not absolute, build it */
-	if (!g_path_is_absolute (filename)){
-		gchar *absolute_path = g_strconcat (g_get_current_dir(), GNOME_VFS_URI_PATH_STR, filename, NULL);
-
-		uri = gnome_vfs_uri_new (absolute_path);
-
-		g_free (absolute_path);
-
-	} else {
-
-		uri = gnome_vfs_uri_new (filename);
-	}
-
-	vfs_result = cong_vfs_new_buffer_from_uri(uri, buffer, size);
-
-	gnome_vfs_uri_unref(uri);
-
-	return vfs_result;
-}
-
-GnomeVFSResult
-cong_vfs_new_buffer_from_uri(GnomeVFSURI* uri, char** buffer, GnomeVFSFileSize* size)
-{
-	GnomeVFSResult vfs_result;
-	GnomeVFSHandle *vfs_handle;
-
-	g_return_val_if_fail(uri,GNOME_VFS_ERROR_BAD_PARAMETERS);
-	g_return_val_if_fail(buffer,GNOME_VFS_ERROR_BAD_PARAMETERS);
-	g_return_val_if_fail(size,GNOME_VFS_ERROR_BAD_PARAMETERS);
-
-	vfs_result = gnome_vfs_open_uri(&vfs_handle,
-					uri,
-					GNOME_VFS_OPEN_READ);
-
-	if (GNOME_VFS_OK!=vfs_result) {
-		return vfs_result;
-	} else {
-		GnomeVFSFileInfo *info;
-		*buffer=NULL;
-		
-		info = gnome_vfs_file_info_new ();
-
-		/* Get the size of the file: */
-		vfs_result = gnome_vfs_get_file_info_from_handle(vfs_handle,
-								 info,
-								 GNOME_VFS_FILE_INFO_DEFAULT);
-		if (GNOME_VFS_OK!=vfs_result) {
-			gnome_vfs_close(vfs_handle);
-			gnome_vfs_file_info_unref (info);
-			
-			return vfs_result;
-		}
-
-		if (!(info->valid_fields & GNOME_VFS_FILE_INFO_FIELDS_SIZE)) {
-			gnome_vfs_close(vfs_handle);
-			gnome_vfs_file_info_unref (info);
-			
-			return GNOME_VFS_ERROR_IO; /* FIXME: is this appropriate? */
-		}
-
-		
-		/* Allocate the buffer: */
-		*buffer = g_malloc(info->size);
-		
-		/* Read the file into the buffer: */
-		vfs_result = cong_vfs_read_bytes(vfs_handle, *buffer, info->size);
-		
-		if (GNOME_VFS_OK!=vfs_result) {
-			
-			g_free(*buffer);
-			gnome_vfs_close(vfs_handle);
-			gnome_vfs_file_info_unref (info);
-
-			*buffer=NULL;
-			
-			return vfs_result;
-		}
-		
-		gnome_vfs_close(vfs_handle);
-		
-		*size = info->size;
-		
-		gnome_vfs_file_info_unref (info);
-
-		return GNOME_VFS_OK;
-	}
-}
-
-
-
 void insert_element_init()
 {
 	GdkColor gcol;
